tests/paczka1/fuzzy1/44766639.err
Error in line 1: S604 S604 62,6
Error in line 11: IQ24HF A565 59,9
Error in line 23: E5zt2uiYBFQ A53 2079
Error in line 27: D3xEN62S A53 84,7
